Naprawa panelu admina